6.3.x fixes, adding Security Domain via cli script instead of XSLT, support for Security Manager